{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 204,
  "lineage": "dfa0874e-66cd-9ebe-b031-4248eb8ba997",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jump_box_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcc6102c2dc9e995",
            "domain": "vpc",
            "id": "eipalloc-0dcc6102c2dc9e995",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-219-195-66.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.195.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085bf48bdadd187f6",
            "domain": "vpc",
            "id": "eipalloc-085bf48bdadd187f6",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-18-144-152-3.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.152.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2726867bd41f1ad",
            "arn": "arn:aws:ec2:us-west-1:013113200357:instance/i-012890d1036a9b394",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012890d1036a9b394",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "princeton-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-033f1b4f3a3fdff8a"
              }
            ],
            "primary_network_interface_id": "eni-033f1b4f3a3fdff8a",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_ip": "18.144.46.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0444e599ddfe4342c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015f83bb8781e4608",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05524252f34c69701"
            ]
          },
          "dependencies": [
            "aws_network_interface.jumpbox-nic-1",
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:internet-gateway/igw-0917e1076bf15e076",
            "id": "igw-0917e1076bf15e076",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085bf48bdadd187f6",
            "connectivity_type": "public",
            "id": "nat-0967852f8f0f2827a",
            "network_interface_id": "eni-04e7052a422d3fd45",
            "private_ip": "10.10.1.227",
            "public_ip": "18.144.152.3",
            "subnet_id": "subnet-015f83bb8781e4608",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Publiv VPC: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Publiv VPC: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-priv-vpc-subnet-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-0a169f40a3ade5556",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a169f40a3ade5556",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "acl-priv-vpc-subnet-main",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "acl-priv-vpc-subnet-main",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-03b929fda8b280882"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-pub-vpc-subnet-external-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-0929dbb5505169c6d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0929dbb5505169c6d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [],
            "tags": {
              "Name": "acl-pub-vpc-subnet-external-1"
            },
            "tags_all": {
              "Name": "acl-pub-vpc-subnet-external-1"
            },
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "external-1-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02a224d96df3345e3",
            "network_acl_id": "acl-0929dbb5505169c6d",
            "subnet_id": "subnet-015f83bb8781e4608"
          },
          "dependencies": [
            "aws_network_acl.acl-pub-vpc-subnet-external-1",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "main-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a37f3c28ec6b1132",
            "network_acl_id": "acl-0a169f40a3ade5556",
            "subnet_id": "subnet-02edfd089d091a9b0"
          },
          "dependencies": [
            "aws_network_acl.acl-priv-vpc-subnet-main",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jumpbox-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-interface/eni-033f1b4f3a3fdff8a",
            "id": "eni-033f1b4f3a3fdff8a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8f:0b:c6:81:5f",
            "owner_id": "013113200357",
            "private_ip": "10.10.1.10",
            "private_ip_list": [
              "10.10.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05524252f34c69701"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015f83bb8781e4608",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Primary Network Interface",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Primary Network Interface",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-main-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f060aca35e6d782e662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f060aca35e6d782e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bba511c3191a5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-main-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06e7eecd21fb63af1519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e7eecd21fb63af1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bba511c3191a5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c89c62a888d1e216662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c89c62a888d1e216",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bba511c3191a5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d5b4fb5a28d4e66d519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5b4fb5a28d4e66d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bba511c3191a5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RT",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-0c89c62a888d1e216",
            "id": "rtb-0c89c62a888d1e216",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0917e1076bf15e076",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Public Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Public Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-0d5b4fb5a28d4e66d",
            "id": "rtb-0d5b4fb5a28d4e66d",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Private VPC: RT Default Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Private VPC: RT Default Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b929fda8b280882"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0635bdcecc13c31b7",
            "route_table_id": "rtb-0c89c62a888d1e216",
            "subnet_id": "subnet-015f83bb8781e4608"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08991f8cfb57a649d",
            "route_table_id": "rtb-0d5b4fb5a28d4e66d",
            "subnet_id": "subnet-02edfd089d091a9b0"
          },
          "dependencies": [
            "aws_route_table.RT",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-05524252f34c69701",
            "description": "SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05524252f34c69701",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-from-anywhere",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "ssh-from-internet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "ssh-from-internet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-03fc4ad5253feb283",
            "description": "SSH access from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fc4ad5253feb283",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-from-jumpbox",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "ssh-from-jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "ssh-from-jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b929fda8b280882"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-02edfd089d091a9b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edfd089d091a9b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Ptivate VPC: Default Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Ptivate VPC: Default Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-03b929fda8b280882"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-015f83bb8781e4608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f83bb8781e4608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: DMZ",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: DMZ",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PrivateVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:vpc/vpc-03b929fda8b280882",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-01e3bdcf75432c3af",
            "default_route_table_id": "rtb-06e7eecd21fb63af1",
            "default_security_group_id": "sg-0bef706a8166b375c",
            "dhcp_options_id": "dopt-77184110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03b929fda8b280882",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e7eecd21fb63af1",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Private",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Private",
              "Team": "John, Afreen, Jawad, Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PublicVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:vpc/vpc-00b93af0fe4e8ef94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0335cfd8bcefff321",
            "default_route_table_id": "rtb-0f060aca35e6d782e",
            "default_security_group_id": "sg-02baee5b79bed0a27",
            "dhcp_options_id": "dopt-77184110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b93af0fe4e8ef94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f060aca35e6d782e",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Public",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Public",
              "Team": "John, Afreen, Jawad, Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-07bba511c3191a5cd",
            "peer_owner_id": "013113200357",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-03b929fda8b280882",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-00b93af0fe4e8ef94"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    }
  ]
}